--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-I'll be a developer
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>I'll be a developer</h2>
+
+<img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com" style="width:104px;height:142px;">
+
+</body>
+</html>
+
